SERVER-16179 Remove the periodic lock manager timeout report